ENH: athlete benchmark... not what you think

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!--========================================================================
     -->
     <div class="ath sqr rn2 bd3 box abs cnt btn">
-      <svg class="rn2" width="42px" height="42px">
+      <svg class="rn2 svg" width="42px" height="42px">
         <rect width="6" height="6" x="14" y="25"/>
         <rect width="6" height="6" x="14" y="18"/>
         <rect width="6" height="6" x="21" y="18"/>
@@ -67,9 +67,8 @@
       </svg>
       <div id="A00" class="msk abs rn2 sfx"></div>
     </div>
-
     <div class="ath sqr rn2 bd3 box abs cnt btn">
-      <svg class="rn2" width="42px" height="42px">
+      <svg class="rn2 svg" width="42px" height="42px">
         <rect width="6" height="6" x="14" y="11"/>
         <rect width="6" height="6" x="21" y="18"/>
         <rect width="6" height="6" x="21" y="25"/>
@@ -77,9 +76,8 @@
       </svg>
       <div id="A01" class="msk abs rn2 sfx"></div>
     </div>
-
     <div class="ath sqr rn2 bd3 box abs cnt btn">
-      <svg class="rn2" width="42px" height="42px">
+      <svg class="rn2 svg" width="42px" height="42px">
         <rect width="6" height="6" x="14" y="25"/>
         <rect width="6" height="6" x="21" y="25"/>
         <rect width="6" height="6" x="21" y="18"/>
@@ -87,9 +85,8 @@
       </svg>
       <div id="A02" class="msk abs rn2 sfx"></div>
     </div>
-
     <div class="ath sqr rn2 bd3 box abs cnt btn">
-      <svg class="rn2" width="42px" height="42px">
+      <svg class="rn2 svg" width="42px" height="42px">
         <rect width="6" height="6" x="25" y="11"/>
         <rect width="6" height="6" x="18" y="18"/>
         <rect width="6" height="6" x="18" y="25"/>
@@ -97,9 +94,8 @@
       </svg>
       <div id="A03" class="msk abs rn2 sfx"></div>
     </div>
-
     <div class="ath sqr rn2 bd3 box abs cnt btn">
-      <svg class="rn2" width="42px" height="42px">
+      <svg class="rn2 svg" width="42px" height="42px">
         <rect width="6" height="6" x="21" y="11"/>
         <rect width="6" height="6" x="21" y="18"/>
         <rect width="6" height="6" x="21" y="25"/>
@@ -107,9 +103,8 @@
       </svg>
       <div id="A04" class="msk abs rn2 sfx"></div>
     </div>
-
     <div class="ath sqr rn2 bd3 box abs cnt btn">
-      <svg class="rn2" width="42px" height="42px">
+      <svg class="rn2 svg" width="42px" height="42px">
         <rect width="6" height="6" x="11" y="25"/>
         <rect width="6" height="6" x="11" y="18"/>
         <rect width="6" height="6" x="18" y="11"/>
@@ -117,9 +112,8 @@
       </svg>
       <div id="A05" class="msk abs rn2 sfx"></div>
     </div>
-
     <div class="ath sqr rn2 bd3 box abs cnt btn">
-      <svg class="rn2" width="42px" height="42px">
+      <svg class="rn2 svg" width="42px" height="42px">
         <rect width="6" height="6" x="11" y="11"/>
         <rect width="6" height="6" x="18" y="25"/>
         <rect width="6" height="6" x="25" y="18"/>
@@ -127,9 +121,8 @@
       </svg>
       <div id="A06" class="msk abs rn2 sfx"></div>
     </div>
-
     <div class="ath sqr rn2 bd3 box abs cnt btn">
-      <svg class="rn2" width="42px" height="42px">
+      <svg class="rn2 svg" width="42px" height="42px">
         <rect width="6" height="6" x="24" y="8"/>
         <rect width="6" height="6" x="17" y="15"/>
         <rect width="6" height="6" x="10" y="22"/>
@@ -137,9 +130,8 @@
       </svg>
       <div id="A07" class="msk abs rn2 sfx"></div>
     </div>
-
     <div class="ath sqr rn2 bd3 box abs cnt btn">
-      <svg class="rn2" width="42px" height="42px">
+      <svg class="rn2 svg" width="42px" height="42px">
         <rect width="6" height="6" x="14" y="28"/>
         <rect width="6" height="6" x="21" y="7"/>
         <rect width="6" height="6" x="21" y="14"/>
@@ -147,9 +139,8 @@
       </svg>
       <div id="A08" class="msk abs rn2 sfx"></div>
     </div>
-
     <div class="ath sqr rn2 bd3 box abs cnt btn">
-      <svg class="rn2" width="42px" height="42px">
+      <svg class="rn2 svg" width="42px" height="42px">
         <rect width="6" height="6" x="14" y="28"/>
         <rect width="6" height="6" x="21" y="7"/>
         <rect width="6" height="6" x="21" y="21"/>
@@ -157,9 +148,8 @@
       </svg>
       <div id="A09" class="msk abs rn2 sfx"></div>
     </div>
-
     <div class="ath sqr rn2 bd3 box abs cnt btn">
-      <svg class="rn2" width="42px" height="42px">
+      <svg class="rn2 svg" width="42px" height="42px">
         <rect width="6" height="6" x="21" y="7"/>
         <rect width="6" height="6" x="14" y="28"/>
         <rect width="6" height="6" x="14" y="21"/>
@@ -167,9 +157,8 @@
       </svg>
       <div id="A10" class="msk abs rn2 sfx"></div>
     </div>
-
     <div class="ath sqr rn2 bd3 box abs cnt btn">
-      <svg class="rn2" width="42px" height="42px">
+      <svg class="rn2 svg" width="42px" height="42px">
         <rect width="6" height="6" x="25" y="7"/>
         <rect width="6" height="6" x="11" y="28"/>
         <rect width="6" height="6" x="11" y="21"/>
@@ -177,9 +166,8 @@
       </svg>
       <div id="A11" class="msk abs rn2 sfx"></div>
     </div>
-
     <div class="ath sqr rn2 bd3 box abs cnt btn">
-      <svg class="rn2" width="42px" height="42px">
+      <svg class="rn2 svg" width="42px" height="42px">
         <rect width="6" height="6" x="25" y="8"/>
         <rect width="6" height="6" x="18" y="15"/>
         <rect width="6" height="6" x="18" y="22"/>
@@ -187,9 +175,8 @@
       </svg>
       <div id="A12" class="msk abs rn2 sfx"></div>
     </div>
-
     <div class="ath sqr rn2 bd3 box abs cnt btn">
-      <svg class="rn2" width="42px" height="42px">
+      <svg class="rn2 svg" width="42px" height="42px">
         <rect width="6" height="6" x="7" y="8"/>
         <rect width="6" height="6" x="14" y="15"/>
         <rect width="6" height="6" x="21" y="22"/>
@@ -197,9 +184,8 @@
       </svg>
       <div id="A13" class="msk abs rn2 sfx"></div>
     </div>
-
     <div class="ath sqr rn2 bd3 box abs cnt btn">
-      <svg class="rn2" width="42px" height="42px">
+      <svg class="rn2 svg" width="42px" height="42px">
         <rect width="6" height="6" x="21" y="28"/>
         <rect width="6" height="6" x="21" y="7"/>
         <rect width="6" height="6" x="21" y="14"/>
@@ -207,9 +193,8 @@
       </svg>
       <div id="A14" class="msk abs rn2 sfx"></div>
     </div>
-
     <div class="ath sqr rn2 bd3 box abs cnt btn">
-      <svg class="rn2" width="42px" height="42px">
+      <svg class="rn2 svg" width="42px" height="42px">
         <rect width="6" height="6" x="21" y="28"/>
         <rect width="6" height="6" x="21" y="7"/>
         <rect width="6" height="6" x="14" y="14"/>
@@ -217,9 +202,8 @@
       </svg>
       <div id="A15" class="msk abs rn2 sfx"></div>
     </div>
-
     <div class="ath sqr rn2 bd3 box abs cnt btn">
-      <svg class="rn2" width="42px" height="42px">
+      <svg class="rn2 svg" width="42px" height="42px">
         <rect width="6" height="6" x="18" y="28"/>
         <rect width="6" height="6" x="18" y="7"/>
         <rect width="6" height="6" x="18" y="14"/>
@@ -227,9 +211,8 @@
       </svg>
       <div id="A16" class="msk abs rn2 sfx"></div>
     </div>
-
     <div class="ath sqr rn2 bd3 box abs cnt btn">
-      <svg class="rn2" width="42px" height="42px">
+      <svg class="rn2 svg" width="42px" height="42px">
         <rect width="6" height="6" x="11" y="11"/>
         <rect width="6" height="6" x="18" y="11"/>
         <rect width="6" height="6" x="25" y="25"/>
@@ -237,9 +220,8 @@
       </svg>
       <div id="A17" class="msk abs rn2 sfx"></div>
     </div>
-
     <div class="ath sqr rn2 bd3 box abs cnt btn">
-      <svg class="rn2" width="42px" height="42px">
+      <svg class="rn2 svg" width="42px" height="42px">
         <rect width="6" height="6" x="14" y="14"/>
         <rect width="6" height="6" x="21" y="14"/>
         <rect width="6" height="6" x="14" y="21"/>
@@ -247,9 +229,8 @@
       </svg>
       <div id="A18" class="msk abs rn2 sfx"></div>
     </div>
-
     <div class="ath sqr rn2 bd3 box abs cnt btn">
-      <svg class="rn2" width="42px" height="42px">
+      <svg class="rn2 svg" width="42px" height="42px">
         <rect width="6" height="6" x="25" y="18"/>
         <rect width="6" height="6" x="18" y="11"/>
         <rect width="6" height="6" x="11" y="18"/>
@@ -550,26 +531,166 @@
     -->
     <div class="spc flt"></div>
 
-    <div class="bnc sqr flt box rn2"></div>
-    <div class="bnc sqr flt box rn2"></div>
-    <div class="bnc sqr flt box rn2"></div>
-    <div class="bnc sqr flt box rn2"></div>
-    <div class="bnc sqr flt box rn2"></div>
-    <div class="bnc sqr flt box rn2"></div>
-    <div class="bnc sqr flt box rn2"></div>
-    <div class="bnc sqr flt box rn2"></div>
-    <div class="bnc sqr flt box rn2"></div>
-    <div class="bnc sqr flt box rn2"></div>
-    <div class="bnc sqr flt box rn2"></div>
-    <div class="bnc sqr flt box rn2"></div>
-    <div class="bnc sqr flt box rn2"></div>
-    <div class="bnc sqr flt box rn2"></div>
-    <div class="bnc sqr flt box rn2"></div>
-    <div class="bnc sqr flt box rn2"></div>
-    <div class="bnc sqr flt box rn2"></div>
-    <div class="bnc sqr flt box rn2"></div>
-    <div class="bnc sqr flt box rn2"></div>
-    <div class="bnc sqr flt box rn2"></div>
+    <div class="bnc sqr bd3 flt box rn2 cnt">
+      <svg class="bnc rn2" width="42px" height="42px">
+        <rect width="6" height="6" x="14" y="25"/>
+        <rect width="6" height="6" x="14" y="18"/>
+        <rect width="6" height="6" x="21" y="18"/>
+        <rect width="6" height="6" x="21" y="11"/>
+      </svg>
+    </div>
+    <div class="bnc sqr bd3 flt box rn2 cnt">
+      <svg class="bnc rn2" width="42px" height="42px">
+        <rect width="6" height="6" x="14" y="11"/>
+        <rect width="6" height="6" x="21" y="18"/>
+        <rect width="6" height="6" x="21" y="25"/>
+        <rect width="6" height="6" x="14" y="25"/>
+      </svg>
+    </div>
+    <div class="bnc sqr bd3 flt box rn2 cnt">
+      <svg class="bnc rn2" width="42px" height="42px">
+        <rect width="6" height="6" x="14" y="25"/>
+        <rect width="6" height="6" x="21" y="25"/>
+        <rect width="6" height="6" x="21" y="18"/>
+        <rect width="6" height="6" x="21" y="11"/>
+      </svg>
+    </div>
+    <div class="bnc sqr bd3 flt box rn2 cnt">
+      <svg class="bnc rn2" width="42px" height="42px">
+        <rect width="6" height="6" x="25" y="11"/>
+        <rect width="6" height="6" x="18" y="18"/>
+        <rect width="6" height="6" x="18" y="25"/>
+        <rect width="6" height="6" x="11" y="25"/>
+      </svg>
+    </div>
+    <div class="bnc sqr bd3 flt box rn2 cnt">
+      <svg class="bnc rn2" width="42px" height="42px">
+        <rect width="6" height="6" x="21" y="11"/>
+        <rect width="6" height="6" x="21" y="18"/>
+        <rect width="6" height="6" x="21" y="25"/>
+        <rect width="6" height="6" x="14" y="18"/>
+      </svg>
+    </div>
+    <div class="bnc sqr bd3 flt box rn2 cnt">
+      <svg class="bnc rn2" width="42px" height="42px">
+        <rect width="6" height="6" x="11" y="25"/>
+        <rect width="6" height="6" x="11" y="18"/>
+        <rect width="6" height="6" x="18" y="11"/>
+        <rect width="6" height="6" x="25" y="18"/>
+      </svg>
+    </div>
+    <div class="bnc sqr bd3 flt box rn2 cnt">
+      <svg class="bnc rn2" width="42px" height="42px">
+        <rect width="6" height="6" x="11" y="11"/>
+        <rect width="6" height="6" x="18" y="25"/>
+        <rect width="6" height="6" x="25" y="18"/>
+        <rect width="6" height="6" x="18" y="18"/>
+      </svg>
+    </div>
+    <div class="bnc sqr bd3 flt box rn2 cnt">
+      <svg class="bnc rn2" width="42px" height="42px">
+        <rect width="6" height="6" x="24" y="8"/>
+        <rect width="6" height="6" x="17" y="15"/>
+        <rect width="6" height="6" x="10" y="22"/>
+        <rect width="6" height="6" x="17" y="29"/>
+      </svg>
+    </div>
+    <div class="bnc sqr bd3 flt box rn2 cnt">
+      <svg class="bnc rn2" width="42px" height="42px">
+        <rect width="6" height="6" x="14" y="28"/>
+        <rect width="6" height="6" x="21" y="7"/>
+        <rect width="6" height="6" x="21" y="14"/>
+        <rect width="6" height="6" x="14" y="21"/>
+      </svg>
+    </div>
+    <div class="bnc sqr bd3 flt box rn2 cnt">
+      <svg class="bnc rn2" width="42px" height="42px">
+        <rect width="6" height="6" x="14" y="28"/>
+        <rect width="6" height="6" x="21" y="7"/>
+        <rect width="6" height="6" x="21" y="21"/>
+        <rect width="6" height="6" x="14" y="14"/>
+      </svg>
+    </div>
+    <div class="bnc sqr bd3 flt box rn2 cnt">
+      <svg class="bnc rn2" width="42px" height="42px">
+        <rect width="6" height="6" x="21" y="7"/>
+        <rect width="6" height="6" x="14" y="28"/>
+        <rect width="6" height="6" x="14" y="21"/>
+        <rect width="6" height="6" x="14" y="14"/>
+      </svg>
+    </div>
+    <div class="bnc sqr bd3 flt box rn2 cnt">
+      <svg class="bnc rn2" width="42px" height="42px">
+        <rect width="6" height="6" x="25" y="7"/>
+        <rect width="6" height="6" x="11" y="28"/>
+        <rect width="6" height="6" x="11" y="21"/>
+        <rect width="6" height="6" x="18" y="14"/>
+      </svg>
+    </div>
+    <div class="bnc sqr bd3 flt box rn2 cnt">
+      <svg class="bnc rn2" width="42px" height="42px">
+        <rect width="6" height="6" x="25" y="8"/>
+        <rect width="6" height="6" x="18" y="15"/>
+        <rect width="6" height="6" x="18" y="22"/>
+        <rect width="6" height="6" x="11" y="29"/>
+      </svg>
+    </div>
+    <div class="bnc sqr bd3 flt box rn2 cnt">
+      <svg class="bnc rn2" width="42px" height="42px">
+        <rect width="6" height="6" x="7" y="8"/>
+        <rect width="6" height="6" x="14" y="15"/>
+        <rect width="6" height="6" x="21" y="22"/>
+        <rect width="6" height="6" x="28" y="29"/>
+      </svg>
+    </div>
+    <div class="bnc sqr bd3 flt box rn2 cnt">
+      <svg class="bnc rn2" width="42px" height="42px">
+        <rect width="6" height="6" x="21" y="28"/>
+        <rect width="6" height="6" x="21" y="7"/>
+        <rect width="6" height="6" x="21" y="14"/>
+        <rect width="6" height="6" x="14" y="21"/>
+      </svg>
+    </div>
+    <div class="bnc sqr bd3 flt box rn2 cnt">
+      <svg class="bnc rn2" width="42px" height="42px">
+        <rect width="6" height="6" x="21" y="28"/>
+        <rect width="6" height="6" x="21" y="7"/>
+        <rect width="6" height="6" x="14" y="14"/>
+        <rect width="6" height="6" x="14" y="21"/>
+      </svg>
+    </div>
+    <div class="bnc sqr bd3 flt box rn2 cnt">
+      <svg class="bnc rn2" width="42px" height="42px">
+        <rect width="6" height="6" x="18" y="28"/>
+        <rect width="6" height="6" x="18" y="7"/>
+        <rect width="6" height="6" x="18" y="14"/>
+        <rect width="6" height="6" x="18" y="21"/>
+      </svg>
+    </div>
+    <div class="bnc sqr bd3 flt box rn2 cnt">
+      <svg class="bnc rn2" width="42px" height="42px">
+        <rect width="6" height="6" x="11" y="11"/>
+        <rect width="6" height="6" x="18" y="11"/>
+        <rect width="6" height="6" x="25" y="25"/>
+        <rect width="6" height="6" x="25" y="18"/>
+      </svg>
+    </div>
+    <div class="bnc sqr bd3 flt box rn2 cnt">
+      <svg class="bnc rn2" width="42px" height="42px">
+        <rect width="6" height="6" x="14" y="14"/>
+        <rect width="6" height="6" x="21" y="14"/>
+        <rect width="6" height="6" x="14" y="21"/>
+        <rect width="6" height="6" x="21" y="21"/>
+      </svg>
+    </div>
+    <div class="bnc sqr bd3 flt box rn2 cnt">
+      <svg class="bnc rn2" width="42px" height="42px">
+        <rect width="6" height="6" x="25" y="18"/>
+        <rect width="6" height="6" x="18" y="11"/>
+        <rect width="6" height="6" x="11" y="18"/>
+        <rect width="6" height="6" x="18" y="25"/>
+      </svg>
+    </div>
 
     <!--========================================================================
     -->
