ENH: visual improvements

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!--========================================================================
     -->
-    <div id="selection" class="sqr rn2 box abs"></div>
+    <div id="selection" class="sqr rn2 box abs tr1"></div>
 
     <!--========================================================================
     -->
