--- a/index.html
+++ b/index.html
@@ -760,4 +760,4 @@
 <script type="text/javascript" src="update.js"></script>
 <script type="text/javascript" src="zone.js"></script>
 
-<script type="text/javascript" src="engine.js"></script>
+<script type="text/javascript" src="main.js"></script>
