ENH: better visuals + hover bug fix

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
     <div class="cll sqr cnt flt bd1 box fml drd nsss">B 19</div>
 
     <div class="sqr cnt flt bd1 box dgr snns">
-      <div class="cll cnt gol bd2 rn2 box fml" >C 00</div>
+      <div class="cll cnt gol bd2 rn2 box fml lft top" >C 00</div>
     </div>
     <div class="cll sqr cnt flt bd1 box fml lgr ssnn">C 01</div>
     <div class="cll sqr cnt flt bd1 box fml drd snss">C 02</div>
@@ -304,11 +304,11 @@
     <div class="cll sqr cnt flt bd1 box fml lrd sssn">C 17</div>
     <div class="cll sqr cnt flt bd1 box fml dbl snns">C 18</div>
     <div class="sqr cnt flt bd1 box lbl ssnn">
-      <div class="cll cnt gol bd2 rn2 box fml" >C 19</div>
+      <div class="cll cnt gol bd2 rn2 box fml rgt top" >C 19</div>
     </div>
 
     <div class="sqr cnt flt bd1 box lgr nnns">
-      <div class="cll cnt gol bd2 rn2 box fml" >D 00</div>
+      <div class="cll cnt gol bd2 rn2 box fml lft" >D 00</div>
     </div>
     <div class="cll sqr cnt flt bd1 box fml dgr nnnn">D 01</div>
     <div class="cll sqr cnt flt bd1 box fml lgr ssnn">D 02</div>
@@ -329,11 +329,11 @@
     <div class="cll sqr cnt flt bd1 box fml dbl snns">D 17</div>
     <div class="cll sqr cnt flt bd1 box fml lbl nnnn">D 18</div>
     <div class="sqr cnt flt bd1 box dbl nsnn">
-      <div class="cll cnt gol bd2 rn2 box fml" >D 19</div>
+      <div class="cll cnt gol bd2 rn2 box fml rgt" >D 19</div>
     </div>
 
     <div class="sqr cnt flt bd1 box dgr nnns">
-      <div class="cll cnt gol bd2 rn2 box fml" >E 00</div>
+      <div class="cll cnt gol bd2 rn2 box fml lft" >E 00</div>
     </div>
     <div class="cll sqr cnt flt bd1 box fml lgr nnnn">E 01</div>
     <div class="cll sqr cnt flt bd1 box fml dgr nnnn">E 02</div>
@@ -354,11 +354,11 @@
     <div class="cll sqr cnt flt bd1 box fml lbl nnnn">E 17</div>
     <div class="cll sqr cnt flt bd1 box fml dbl nnnn">E 18</div>
     <div class="sqr cnt flt bd1 box lbl nsnn">
-      <div class="cll cnt gol bd2 rn2 box fml" >E 19</div>
+      <div class="cll cnt gol bd2 rn2 box fml rgt" >E 19</div>
     </div>
 
     <div class="sqr cnt flt bd1 box lgr nnns">
-      <div class="cll cnt gol bd2 rn2 box fml" >F 00</div>
+      <div class="cll cnt gol bd2 rn2 box fml lft" >F 00</div>
     </div>
     <div class="cll sqr cnt flt bd1 box fml dgr nnnn">F 01</div>
     <div class="cll sqr cnt flt bd1 box fml lgr nnnn">F 02</div>
@@ -379,11 +379,11 @@
     <div class="cll sqr cnt flt bd1 box fml dbl nnnn">F 17</div>
     <div class="cll sqr cnt flt bd1 box fml lbl nnnn">F 18</div>
     <div class="sqr cnt flt bd1 box dbl nsnn">
-      <div class="cll cnt gol bd2 rn2 box fml" >F 19</div>
+      <div class="cll cnt gol bd2 rn2 box fml rgt" >F 19</div>
     </div>
 
     <div class="sqr cnt flt bd1 box dgr nnns">
-      <div class="cll cnt gol bd2 rn2 box fml" >G 00</div>
+      <div class="cll cnt gol bd2 rn2 box fml lft" >G 00</div>
     </div>
     <div class="cll sqr cnt flt bd1 box fml lgr nnnn">G 01</div>
     <div class="cll sqr cnt flt bd1 box fml dgr nnnn">G 02</div>
@@ -404,11 +404,11 @@
     <div class="cll sqr cnt flt bd1 box fml lbl nnnn">G 17</div>
     <div class="cll sqr cnt flt bd1 box fml dbl nnnn">G 18</div>
     <div class="sqr cnt flt bd1 box lbl nsnn">
-      <div class="cll cnt gol bd2 rn2 box fml" >G 19</div>
+      <div class="cll cnt gol bd2 rn2 box fml rgt" >G 19</div>
     </div>
 
     <div class="sqr cnt flt bd1 box lgr nnns">
-      <div class="cll cnt gol bd2 rn2 box fml" >H 00</div>
+      <div class="cll cnt gol bd2 rn2 box fml lft" >H 00</div>
     </div>
     <div class="cll sqr cnt flt bd1 box fml dgr nnnn">H 01</div>
     <div class="cll sqr cnt flt bd1 box fml lgr nnnn">H 02</div>
@@ -429,11 +429,11 @@
     <div class="cll sqr cnt flt bd1 box fml dbl nnnn">H 17</div>
     <div class="cll sqr cnt flt bd1 box fml lbl nnnn">H 18</div>
     <div class="sqr cnt flt bd1 box dbl nsnn">
-      <div class="cll cnt gol bd2 rn2 box fml" >H 19</div>
+      <div class="cll cnt gol bd2 rn2 box fml rgt" >H 19</div>
     </div>
 
     <div class="sqr cnt flt bd1 box dgr nnns">
-      <div class="cll cnt gol bd2 rn2 box fml" >I 00</div>
+      <div class="cll cnt gol bd2 rn2 box fml lft" >I 00</div>
     </div>
     <div class="cll sqr cnt flt bd1 box fml lgr nnnn">I 01</div>
     <div class="cll sqr cnt flt bd1 box fml dgr nssn">I 02</div>
@@ -454,11 +454,11 @@
     <div class="cll sqr cnt flt bd1 box fml lbl nnss">I 17</div>
     <div class="cll sqr cnt flt bd1 box fml dbl nnnn">I 18</div>
     <div class="sqr cnt flt bd1 box lbl nsnn">
-      <div class="cll cnt gol bd2 rn2 box fml" >I 19</div>
+      <div class="cll cnt gol bd2 rn2 box fml rgt" >I 19</div>
     </div>
 
     <div class="sqr cnt flt bd1 box lgr nnss">
-      <div class="cll cnt gol bd2 rn2 box fml" >J 00</div>
+      <div class="cll cnt gol bd2 rn2 box fml lft bot" >J 00</div>
     </div>
     <div class="cll sqr cnt flt bd1 box fml dgr nssn">J 01</div>
     <div class="cll sqr cnt flt bd1 box fml lrd snss">J 02</div>
@@ -479,7 +479,7 @@
     <div class="cll sqr cnt flt bd1 box fml drd sssn">J 17</div>
     <div class="cll sqr cnt flt bd1 box fml lbl nnss">J 18</div>
     <div class="sqr cnt flt bd1 box dbl nssn">
-      <div class="cll cnt gol bd2 rn2 box fml" >J 19</div>
+      <div class="cll cnt gol bd2 rn2 box fml rgt bot" >J 19</div>
     </div>
 
     <div class="cll sqr cnt flt bd1 box fml drd ssns">K 00</div>
