... had to be done, is coming more clear now

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <!--========================================================================
     -->
-    <div id="ball" class="sqr rn2 bd3 box abs bal"></div>
+    <div id="ball" class="sqr rn2 bd3 box abs bal tr3"></div>
 
     <div id="trigger" class="cnt rn2 bd2 sh0 box abs">
       <div class="cnt rn2 bd2 sh1 box">
@@ -746,15 +746,16 @@
 <script> const o = {} </script>
 
 <script type="text/javascript" src="click.js"></script>
-<script type="text/javascript" src="finish.js"></script>
 <script type="text/javascript" src="handle.js"></script>
 <script type="text/javascript" src="hover.js"></script>
 <script type="text/javascript" src="info.js"></script>
 <script type="text/javascript" src="press.js"></script>
 <script type="text/javascript" src="page.js"></script>
 <script type="text/javascript" src="state.js"></script>
+<script type="text/javascript" src="test.js"></script>
 <script type="text/javascript" src="tool.js"></script>
 <script type="text/javascript" src="update.js"></script>
-<script type="text/javascript" src="zone.js"></script>
+<script type="text/javascript" src="zone_click.js"></script>
+<script type="text/javascript" src="zone_show.js"></script>
 
 <script type="text/javascript" src="main.js"></script>
