ENH: general cleanup + major fix (ball_mask)

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 
     <!--========================================================================
     -->
-    <div id="ball" class="sqr rn2 bd3 box abs bal tr3"></div>
+    <div id="ball" class="sqr rn2 bd3 cnt box abs bal tr3">
+      <div id="ball_mask" class="rn2 msk"></div>
+    </div>
 
     <div id="trigger" class="cnt rn2 bd2 sh0 box abs">
       <div class="cnt rn2 bd2 sh1 box">
