ENH: a quick save before sorting gnarlier issues

--- a/index.html
+++ b/index.html
@@ -748,6 +748,7 @@
 <script> const o = {} </script>
 
 <script type="text/javascript" src="click.js"></script>
+<script type="text/javascript" src="finish.js"></script>
 <script type="text/javascript" src="handle.js"></script>
 <script type="text/javascript" src="hover.js"></script>
 <script type="text/javascript" src="info.js"></script>
