ENH: read comment
Based on the last commit’s comment…

Chrome: is now broken vertically and horizontally!

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <!--////////////////////////////////////////////////////////////////////////////
 -->
-<body>
+<body class="cnt">
 
   <div id="master">
 
