ENH: auto save enabled + small style cleanup

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 -->
 <body class="cnt">
 
-  <div id="master">
+  <div id="master" class="cnt">
 
-    <div id="word_hard" class="cnt wrd">
-      <div class="fml cnt ttl">H</div>
-      <div class="fml cnt ttl">A</div>
-      <div class="fml cnt ttl">R</div>
-      <div class="fml cnt ttl">D</div>
+    <div id="word_hard" class="cnt wrd fml">
+      <div class="cnt ttl">H</div>
+      <div class="cnt ttl">A</div>
+      <div class="cnt ttl">R</div>
+      <div class="cnt ttl">D</div>
     </div>
 
     <div id="arena" class="bd1">
@@ -750,11 +750,11 @@
 
     </div><!-- end arena -->
 
-    <div id="word_ball" class="cnt wrd">
-      <div class="fml cnt ttl">B</div>
-      <div class="fml cnt ttl">A</div>
-      <div class="fml cnt ttl">L</div>
-      <div class="fml cnt ttl">L</div>
+    <div id="word_ball" class="cnt wrd fml">
+      <div class="cnt ttl">B</div>
+      <div class="cnt ttl">A</div>
+      <div class="cnt ttl">L</div>
+      <div class="cnt ttl">L</div>
     </div>
 
   </div><!-- end master -->
