ENH: infame console working

--- a/index.html
+++ b/index.html
@@ -742,10 +742,10 @@
         </div>
       </div><!-- end clock -->
 
-      <div id="console" class="cnt flt bd1 box dsp rn1 fml">CONSOLE</div>
+      <div id="console" class="cnt flt bd1 box dsp rn1 fml glw"></div>
 
       <div id="no" class="cnt yon flt bd1 box dsp rn1 fml tr1"></div>
-      <div id="reset" class="cnt flt bd1 box btn fml tr1">RESET</div>
+      <div id="reset" class="cnt flt bd1 box btn fml tr1"></div>
       <div id="yes" class="cnt yon flt bd1 box dsp rn1 fml tr1"></div>
 
     </div><!-- end arena -->
